--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.7",
     "vite": "^2.4.3"
+  },
+  "dependencies": {
+    "@alpinejs/persist": "^3.3.3"
   }
 }
