--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "start": "vite preview"
+    "preview": "vite preview"
   },
   "repository": "",
   "author": {
