--- a/package.json
+++ b/package.json
@@ -18,13 +18,10 @@
     "posthtml": "^0.16.5",
     "posthtml-inline-svg": "^0.2.0",
     "tailwindcss": "^2.2.7",
-    "vite": "^2.4.3"
+    "vite": "^2.4.3",
+    "vite-plugin-posthtml": "0.0.3"
   },
   "dependencies": {
-    "@alpinejs/persist": "^3.3.3",
-    "path": "^0.12.7",
-    "vite-plugin-compression": "^0.3.5",
-    "vite-plugin-imagemin": "^0.4.5",
-    "vite-plugin-posthtml": "0.0.3"
+    "@alpinejs/persist": "^3.3.3"
   }
 }
